--- a/composer.json
+++ b/composer.json
@@ -81,6 +81,7 @@
     "league/csv": "~8.2",
     "symfony/console": "^3.2",
     "league/oauth2-server": "^5.1.4",
+    "league/openid-connect-claims": "^1.1.0",
     "indigophp/hash-compat": "^1.1",
     "phpseclib/phpseclib": "^2.0",
     "symfony/psr-http-message-bridge": "^1.0",
