--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,9 @@
     "league/flysystem": "1.*",
     "symfony/event-dispatcher": "3.*",
     "symfony/serializer": "3.*",
-    "illuminate/container": "^5.2|^5.4|^5.6",
-    "illuminate/config": "^5.2|^5.4|^5.6",
+    "illuminate/container": "5.2.*",
+    "illuminate/config": "5.2.*",
+    "illuminate/filesystem": "5.2.*",
     "patchwork/utf8": "~1.2.3|~1.3",
     "wikimedia/less.php": "^1.8.0",
     "imagine/imagine": "^1.1.0",
