Fix OOM issue in tests

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     "symfony/http-foundation": "^3.4.17",
     "symfony/routing": "3.*",
     "symfony/http-kernel": "3.4.*",
-    "doctrine/orm": "~2.6",
+    "doctrine/orm": "^2.6.3",
     "doctrine/migrations": "1.*",
     "league/flysystem": "1.*",
     "symfony/event-dispatcher": "3.*",
@@ -53,18 +53,18 @@
     "htmlawed/htmlawed": "1.*",
     "mobiledetect/mobiledetectlib": "2.*",
     "monolog/monolog": "^1.5.0",
-    "sunra/php-simple-html-dom-parser": "1.*",
+    "sunra/php-simple-html-dom-parser": "^1.5.2",
     "hautelook/phpass": "0.3.*",
     "voku/urlify": "~1.0.1",
     "dapphp/securimage": "3.*",
     "anahkiasen/html-object": "~1.4",
     "primal/color": "1.0.*",
     "concrete5/zend-queue": "0.9.*",
-    "zendframework/zend-mail": "2.*",
-    "zendframework/zend-cache": "2.*",
-    "zendframework/zend-http": "2.*",
-    "zendframework/zend-feed": "2.*",
-    "zendframework/zend-i18n": "2.*",
+    "zendframework/zend-mail": "^2.8",
+    "zendframework/zend-cache": "^2.8",
+    "zendframework/zend-http": "^2.8",
+    "zendframework/zend-feed": "^2.8",
+    "zendframework/zend-i18n": "^2.8",
     "nesbot/carbon": "~1.15",
     "egulias/email-validator": "1.*",
     "punic/punic": "^3.0.1",
